--- a/assignment-helper/package.json
+++ b/assignment-helper/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.12",
+    "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "prop-types": "^15.8.1",
@@ -19,7 +22,8 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
